# django-org-model-logs

./: .gitignore  .pre-commit-config.yaml  README.rst  setup.cfg
django_org_model_logs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
org_model_logs/: apps.py  settings.py  utils.py
